[package]
name = "mjpeg-rs"
version = "0.1.0"
authors = ["Daisuke Kato"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0-rc"
log = "0.4.8"
env_logger = "0.6"
futures = "0.3.1"
tokio = "0.2"

image = "0.22"
structopt = "0.3"

[target.'cfg(target_os="windows")'.dependencies]
escapi = "4.0"

[target.'cfg(target_os="macos")'.dependencies]
opencv = {version = "0.26", default-features = false, features = ["buildtime-bindgen", "opencv-41"]}
