[package]
name = "mjpeg-rs"
version = "0.1.0"
authors = ["Daisuke Kato"]
edition = "2021"

[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
tokio = "1"

image = "0.24"
structopt = "0.3"

[target.'cfg(target_os="windows")'.dependencies]
escapi = "4.0"

[target.'cfg(target_os="macos")'.dependencies]
opencv = {version = "0.26", default-features = false, features = ["buildtime-bindgen", "opencv-41"]}
